# aoq-automation

./: .gitignore  generate_types.py  main.py  nn.ipynb  parse_json.py  pyproject.toml  requirements.txt  start.py  utils.py  volume-processing.py
aoq/: __init__.py
aoq/database/: __init__.py  database.py  object.py  types.py
aoq/parse/: mal.py  request.py  shiki.py  tools.py  url.py
aoq/telegram/: bot.py  handler.py
aoq_automation/: __init__.py  __main__.py  config.py
aoq_automation/database/: __init__.py  database.py  models.py  tools.py  utils.py
aoq_automation/parser/: __init__.py  mal_page.py  utils.py
aoq_automation/parser/mal/: __init__.py  page.py  url.py
aoq_automation/telegram/: filters.py  filterset.py  logic.py  preactions.py  start.py  survey.py  utils.py
aoq_automation/tgbot/: logic.py  markups.py  preactions.py  survey.py  utils.py
aoq_automation/webparse/: pageparser.py  urlparser.py  utils.py
aoq_automation/webparse/anidb/: __init__.py  page.py  url.py
aoq_automation/webparse/mal/: __init__.py  page.py  url.py
aoq_automation/webparse/shiki/: page.py  url.py
bot/: bot.py  example.py
db/: db.py  handler.py  objects.py  start.sql  types.py
files/: README.md  start.sql
parser/: mal.py  parse.py  shiki.py
tests/: test_mal.py  test_shiki.py  test_url.py
tests/database/: test_validators.py
tests/files/: anidb-dumbbell.html  anidb-grand-blue.html  mal-ao-no-hako.html  mal-stats-ao-no-hako.html  shiki-kage-kara-mamoru.html
tests/parser/: test_url.py
tests/webparse/: test_url_chain.py
video/: video.py
(+13 files in other folders)
