[tool.poetry]
name = "aoq-automation"
version = "0.1.0"
description = ""
authors = ["Vasya Mozhaev <mozhay2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"
aiogram = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
