[tool.poetry]
name = "aoq-automation"
version = "0.1.0"
description = ""
authors = ["Vasya Mozhaev <mozhay2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
aiogram = "^3.14.0"
asyncache = "^0.3.1"
pyquery = "^2.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
